<resources>
    <string name="app_name">Entire News</string>
    <string name="news">News</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_lib">Libraries We Use</string>
    <string name="activity_signup">Sign Up</string>
    <string name="activity_reg">Register</string>
    <string name="activity_login">Log In</string>
    <string name="activity_login_reg">Log In/Register</string>
    <string name="views">120 Views</string>
    <string name="saves">120 Saves</string>
    <string name="share">Share</string>
    <string-array name="list_sources_names">
        <item>BBC News</item>
        <item>Bloomberg</item>
        <item>Business Insider</item>
        <item>Buzzfeed</item>
        <item>CNN</item>
        <item>CNBC</item>
        <item>Engadget</item>
        <item>ESPN</item>
        <item>Hacker News</item>
        <item>Reuters</item>
        <item>TechCrunch</item>
        <item>TechRadar</item>
        <item>The New York Times</item>
        <item>The Verge</item>
        <item>Time</item>
        <item>USA Today</item>
    </string-array>
    <string name="ago_year">year ago</string>
    <string name="ago_years">years ago</string>
    <string name="ago_month">month ago</string>
    <string name="ago_months">months ago</string>
    <string name="ago_week">a week ago</string>
    <string name="ago_weeks">weeks ago</string>
    <string name="ago_day">yesterday</string>
    <string name="ago_days">days ago</string>
    <string name="ago_hour">hour ago</string>
    <string name="ago_hours">hours ago</string>
    <string name="ago_minute">minute ago</string>
    <string name="ago_minutes">minutes ago</string>
    <string name="ago_seconds">seconds ago</string>
    <string name="ago_now">just now</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="date">October 2, 2017</string>
    <string name="response_saved">News saved for offline reading.</string>
    <string name="response_unsaved">News removed from offline reading.</string>
    <string name="response_fail">Something went wrong, please check your internet connection</string>
    <string name="response_error">Something doesn\'t look, right, please try again later</string>
    <string name="source">- by The New York Times</string>
    <string name="small_text">
        Components may have different resting elevations across platforms, depending on the depth
        of the environment theory of a rationalized space and a system of motion.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_news_source_bbc">BBC News</string>
    <string name="title_news_source_bloomberg">Bloomberg</string>
    <string name="title_news_source_business_insider">Business Insider</string>
    <string name="title_news_source_buzzfeed">Buzzfeed</string>
    <string name="title_news_source_cnn">CNN</string>
    <string name="title_news_source_cnbc">CNBC</string>
    <string name="title_news_source_engadget">Engadget</string>
    <string name="title_news_source_espn">ESPN</string>
    <string name="title_news_source_hacker_news">Hacker News</string>
    <string name="title_news_source_reuters">Reuters</string>
    <string name="title_news_source_techcrunch">TechCrunch</string>
    <string name="title_news_source_tech_radar">TechRadar</string>
    <string name="title_news_source_new_york_times">The New York Times</string>
    <string name="title_news_source_the_verge">The Verge</string>
    <string name="title_news_source_time">Time</string>
    <string name="title_news_source_usa_today">USA Today</string>
    <string name="transition_news" translatable="false">news</string>
    <string name="transition_news_title" translatable="false">news_title</string>
    <string name="transition_news_background" translatable="false">news_background</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_news_sources">Select news sources</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Notifications</string>
    <string name="pref_title_sync_frequency">Choose notifications interval</string>
    <string-array name="pref_notifications_interval_titles">
        <item>Every 6 Hours</item>
        <item>Every 12 Hours</item>
        <item>Every day</item>
    </string-array>
    <string-array name="pref_notifications_interval_values">
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Show notifications</string>
    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate_key">notifications_new_message_vibrate</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_sample_key">sample_notification</string>
    <string name="pref_sample_title">View example notification</string>
    <string name="pref_sample_summary">See what a notification looks like</string>
    <string name="font_name">fonts/angltrr.ttf</string>
    <string name="title_all_news">All sources</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_trending">Trending</string>
    <string name="title_saved">Saved</string>
</resources>