<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="bbc-news"
        android:title="@string/title_news_source_bbc" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="bloomberg"
        android:title="@string/title_news_source_bloomberg" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="business-insider"
        android:title="@string/title_news_source_business_insider" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="buzzfeed"
        android:title="@string/title_news_source_buzzfeed" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="cnn"
        android:title="@string/title_news_source_cnn" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="cnbc"
        android:title="@string/title_news_source_cnbc" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="engadget"
        android:title="@string/title_news_source_engadget" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="espn"
        android:title="@string/title_news_source_espn" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="hacker-news"
        android:title="@string/title_news_source_hacker_news" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="reuters"
        android:title="@string/title_news_source_reuters" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="techcrunch"
        android:title="@string/title_news_source_techcrunch" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="tech-radar"
        android:title="@string/title_news_source_tech_radar" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="new-york-times"
        android:title="@string/title_news_source_new_york_times" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="the-verge"
        android:title="@string/title_news_source_the_verge" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="time"
        android:title="@string/title_news_source_time" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="usa-today"
        android:title="@string/title_news_source_usa_today" />


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" /-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->
</PreferenceScreen>
