<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <ListPreference
        android:defaultValue="12"
        android:dependency="notifications_new_message"
        android:entries="@array/pref_notifications_interval_titles"
        android:entryValues="@array/pref_notifications_interval_values"
        android:key="notifications_interval"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="@string/pref_title_vibrate_key"
        android:title="@string/pref_title_vibrate" />

    <Preference
        android:key="@string/pref_sample_key"
        android:summary="@string/pref_sample_summary"
        android:title="@string/pref_sample_title" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference-->
</PreferenceScreen>
