<?xml version="1.0" encoding="utf-8"?>
<com.csci150.newsapp.entirenews.utils.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/draggable_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:dragDismissDistance="@dimen/drag_dismiss_distance"
    app:dragDismissScale="0.95">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:transitionName="@string/transition_news_background" />

    <com.csci150.newsapp.entirenews.utils.ParallaxImageView
        android:id="@+id/iv_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:foreground="@drawable/mid_grey_ripple"
        android:minHeight="168dp"
        android:stateListAnimator="@animator/app_bar_pin"
        android:transitionName="@string/transition_news"
        app:maxScrimAlpha="0.4"
        app:parallaxFactor="-0.5"
        app:scrimAlpha="0"
        app:scrimColor="@color/scrim" />


    <!-- We're 'faking' a toolbar here as we just want a back button.
     This approach lets the borderless ripple extend beyond the back button's bounds,
     toolbar clips it. Wrapping layout needed for the ripple. -->
    <FrameLayout
        android:id="@+id/back_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="9dp">

        <!-- animate alpha in NewsItem#enterAnimation
             margins push out parent for the borderless ripple -->
        <ImageButton
            android:id="@+id/back"
            android:layout_width="?android:actionBarSize"
            android:layout_height="?android:actionBarSize"
            android:layout_marginBottom="@dimen/margin_full"
            android:layout_marginEnd="@dimen/margin_full"
            android:background="@drawable/mid_grey_ripple"
            android:src="@drawable/ic_arrow_back" />

    </FrameLayout>

    <!-- dummy view stopping the below NestedScrollView from capturing
    focus which messes up layout -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="no" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_full">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text" />
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_full"
        android:src="@drawable/ic_star_white_24dp"
        app:layout_anchor="@id/iv_cover"
        app:layout_anchorGravity="bottom|end" />

</com.csci150.newsapp.entirenews.utils.ElasticDragDismissFrameLayout>